# gemrb

./: .gitignore  Build-Xbox.ps1  CMakeLists.txt  XBOX_BUILD_GUIDE.md  Xbox_Build_Scripts_README.md  build_xbox.bat  quick_xbox_build.bat  validate_xbox_env.bat
cmake/: Helpers.cmake  IncludeBeforeProject.cmake  XboxDependencies.cmake
gemrb/: CMakeLists.txt
gemrb/core/Audio/: MusicLoop.cpp
gemrb/includes/: SClassID.h
gemrb/plugins/: CMakeLists.txt
gemrb/plugins/CppScript/: ActionConstants.h  CMakeLists.txt  ClockScript.cpp  ClockScript.h  CppScript.cpp  CppScript.h  CppScriptAPI.cpp  CppScriptAPI.h  ModalConstants.h  PythonToCppDemo.cpp  README.md  TRANSLATION_SUMMARY.md  build_demo.sh
gemrb/plugins/SDLAudio/: SDLAudio.cpp
gemrb/plugins/SDLVideo/: SDL20Video.cpp
test-build/: CMakeCache.txt
